# kamaji

./: AGENTS.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
crates/kamaji/: Cargo.toml
crates/kamaji-core/: Cargo.toml
crates/kamaji-core/src/: config.rs  db.rs  detect.rs  events.rs  layout.rs  lib.rs  models.rs  paths.rs  poll.rs  session.rs  zellij.rs  zellij_config.rs
crates/kamaji/src/: agent.rs  app.rs  cli.rs  client.rs  config.rs  daemon.rs  db.rs  detect.rs  engine.rs  main.rs  picker.rs  session.rs  sse.rs  test_support.rs  theme.rs  update.rs  zellij_config.rs
crates/kamaji/src/ui/: board.rs  mod.rs  modals.rs
crates/kamajid/: Cargo.toml
crates/kamajid/src/: error.rs  lib.rs  main.rs  poll_task.rs  state.rs  zellij_web.rs
crates/kamajid/src/routes/: config.rs  events.rs  healthz.rs  mod.rs  projects.rs  tickets.rs
crates/kamajid/tests/: api.rs  runtime_files.rs  support.rs
docs/superpowers/plans/: 2026-05-23-auto-background-session-on-create.md  2026-05-23-auto-move-to-review.md  2026-05-23-kamaji.md  2026-05-24-board-web-restyle.md  2026-05-24-ticket-search-filter.md  2026-05-24-ui-theming.md  2026-05-25-fuzzy-root-path.md  2026-05-25-install-and-self-update.md  2026-05-25-modal-project-picker.md  2026-05-27-phase-0-extract-kamaji-core.md  2026-05-30-phase-1a-core-extraction.md  2026-05-30-phase-1b-daemon-api.md  2026-05-30-phase-1c-orchestration.md  2026-05-30-phase-1d-zellij-web-attach.md  2026-05-30-phase-1e-hardening.md  2026-05-30-phase-2-tui-client.md  2026-05-30-phase-3-browser-board.md
docs/superpowers/specs/: 2026-05-23-auto-background-session-on-create-design.md  2026-05-23-auto-move-to-review-design.md  2026-05-23-kamaji-design.md  2026-05-23-ticket-bullet-colors-design.md  2026-05-24-board-web-restyle-design.md  2026-05-24-ticket-search-filter-design.md  2026-05-24-ui-theming-design.md  2026-05-25-cli-background-session-design.md  2026-05-25-fuzzy-root-path-design.md  2026-05-25-install-and-self-update-design.md  2026-05-25-modal-project-picker-design.md  2026-05-25-per-project-ticket-numbers-design.md  2026-05-26-default-agent-picker-design.md  2026-05-26-multi-select-close-design.md  2026-05-27-browser-first-pivot-design.md  2026-05-30-phase-1-kamajid-design.md  2026-05-30-phase-2-tui-client-design.md  2026-05-30-phase-3-browser-board-design.md
src/: agent.rs  app.rs  cli.rs  config.rs  db.rs  detect.rs  dir_select.rs  engine.rs  git.rs  layout.rs  main.rs  models.rs  paths.rs  picker.rs  session.rs  slug.rs  theme.rs  update.rs  zellij.rs
src/ui/: board.rs  mod.rs  modals.rs
