[package]
name = "kamaji"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
anyhow = "1"
ureq = "2"
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
