[package]
name = "kamaji-core"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"

[dev-dependencies]
tempfile = "3"
