[package]
name = "kamaji"
version = "0.3.0"
edition = "2021"

[dependencies]
kamaji-core = { path = "../kamaji-core" }
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
directories = "5"
anyhow = "1"
ureq = "2"
serde_json = "1"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }

# Windows release archives are `.zip` (Windows-idiomatic); extract them with a
# pure-Rust unzip rather than relying on a bundled CLI tool. Unix uses `tar`.
[target.'cfg(windows)'.dependencies]
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
kamajid = { path = "../kamajid" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
axum = "0.7"
