[package]
name = "kamajid"
version = "0.3.0"
edition = "2021"
publish = false

[[bin]]
name = "kamajid"
path = "src/main.rs"

[lib]
name = "kamajid"
path = "src/lib.rs"

[dependencies]
kamaji-core = { path = "../kamaji-core" }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "signal", "time"] }
tower-http = { version = "0.6", features = ["trace"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Integration tests in tests/ compile as a SEPARATE crate that does NOT inherit
# this package's [dependencies] — it only sees `kamajid` plus these dev-deps.
# So every crate the tests name directly must be listed here, even where it
# duplicates a normal dependency above (Cargo unifies the versions).
[dev-dependencies]
kamaji-core = { path = "../kamaji-core" }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde_json = "1"
futures = "0.3"
bytes = "1"
tempfile = "3"
